--- a/frontend/src/app/components/edit/edit.component.html
+++ b/frontend/src/app/components/edit/edit.component.html
@@ -50,7 +50,7 @@
 
     <input  placeholder="Role" formControlName="role" #role>
     <br><br>
-    <button mat-raised-button="accent" routerLink="/list">Back</button>
+    <button routerLink="/list">Back</button>
     <button type="submit" (click)="updateUser(email.value, password.value, firstName.value, lastName.value, role.value)" [disabled]="updateForm.pristine || updateForm.invalid" mat-raised-button color="primary" >Save</button>
   </form>
 </div>
